main/default/objects/Client_Capture__c/Client_Capture__c.object-meta.xml
<CustomObject>
    <label>Client Capture</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Client Capture ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Capture</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>