main/default/objects/Client_Capture__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Capture</relationshipLabel>
    <relationshipName>Client_Capture</relationshipName>
    <type>Lookup</type>
</CustomField>