main/default/objects/Client_Capture__c/fields/Capture_Functional_Clinical_Area__c.field-meta.xml
<CustomField>
    <fullName>Capture_Functional_Clinical_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capture Functional/Clinical Area</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Data__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Master_Data__c.Name</field>
            <operation>equals</operation>
            <value>Area</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Client Capture (Capture Functional/Clinical Area:)</relationshipLabel>
    <relationshipName>Client_Capture</relationshipName>
    <type>Lookup</type>
</CustomField>