main/default/objects/Client_Capture__c/fields/Capture_Type__c.field-meta.xml
<CustomField>
    <fullName>Capture_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capture Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Data__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Master_Data__c.Name</field>
            <operation>equals</operation>
            <value>Type</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Client Capture (Capture Type)</relationshipLabel>
    <relationshipName>Client_Capture1</relationshipName>
    <type>Lookup</type>
</CustomField>