main/default/objects/Client_Capture__c/fields/Category_Test_Value__c.field-meta.xml
<CustomField>
    <fullName>Category_Test_Value__c</fullName>
    <formula>Capture_Category__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Test Value</label>
    <type>Text</type>
</CustomField>