main/default/objects/Client_Capture__c/fields/Category_Values__c.field-meta.xml
<CustomField>
    <fullName>Category_Values__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category Values</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Data_Value__c.Master_Data__c</field>
            <operation>equals</operation>
            <valueField>$Source.Capture_Category__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Master_Data_Value__c</referenceTo>
    <relationshipLabel>Client Capture (Category Values)</relationshipLabel>
    <relationshipName>Client_Capture1</relationshipName>
    <type>Lookup</type>
</CustomField>