main/default/objects/Client_Capture__c/fields/Compass_Capture__c.field-meta.xml
<CustomField>
    <fullName>Compass_Capture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capture ID#</label>
    <referenceTo>Compass_Capture__c</referenceTo>
    <relationshipLabel>Client Capture</relationshipLabel>
    <relationshipName>Capture_Entity</relationshipName>
    <type>Lookup</type>
</CustomField>