main/default/objects/Client_Capture__c/fields/Entity_L2__c.field-meta.xml
<CustomField>
    <fullName>Entity_L2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity - L2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Data__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Client Capture (Entity - L2)</relationshipLabel>
    <relationshipName>Capture_Entity2</relationshipName>
    <type>Lookup</type>
</CustomField>