main/default/objects/Client_Capture__c/fields/Functional_Clinical_Area_Values__c.field-meta.xml
<CustomField>
    <fullName>Functional_Clinical_Area_Values__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Functional/Clinical Area Values</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Data_Value__c.Master_Data__c</field>
            <operation>equals</operation>
            <valueField>$Source.Capture_Functional_Clinical_Area__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Master_Data_Value__c</referenceTo>
    <relationshipLabel>Client Capture (Functional/Clinical Area Values)</relationshipLabel>
    <relationshipName>Client_Capture2</relationshipName>
    <type>Lookup</type>
</CustomField>