main/default/objects/Client_Capture__c/fields/Test_Type_Value__c.field-meta.xml
<CustomField>
    <fullName>Test_Type_Value__c</fullName>
    <formula>Type_Values__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Type Value</label>
    <type>Text</type>
</CustomField>