main/default/objects/Client_Capture__c/fields/Type_Values__c.field-meta.xml
<CustomField>
    <fullName>Type_Values__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type Values</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Data_Value__c.Master_Data__c</field>
            <operation>equals</operation>
            <valueField>$Source.Capture_Type__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Master_Data_Value__c</referenceTo>
    <relationshipLabel>Client Capture (Capture Type Values)</relationshipLabel>
    <relationshipName>Client_Capture</relationshipName>
    <type>Lookup</type>
</CustomField>