main/default/objects/Client_Capture__c/listViews/Filtered.listView-meta.xml
<ListView>
    <fullName>Filtered</fullName>
    <columns>NAME</columns>
    <columns>Entity_Value_L1__c</columns>
    <columns>Entity_Value_L2__c</columns>
    <columns>Entity_Value_L3__c</columns>
    <filterScope>Mine</filterScope>
    <label>Filtered</label>
</ListView>